--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -25,12 +26,6 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Debug secrets
-      run: |
-        echo "HOST: ${{ secrets.SERVER_HOST }}"
-        echo "PORT: ${{ secrets.SERVER_PORT }}"
-        echo "USER: ${{ secrets.SERVER_USERNAME }}"
-    
     - name: Deploy to server via SSH
       uses: appleboy/ssh-action@v1.0.3
       with:
@@ -44,10 +39,19 @@ jobs:
           git pull origin main
           npm ci
           npm run build
-          pm2 restart game_frontend
+          
+          # 기존 game-frontend 프로세스가 있으면 삭제
+          pm2 delete game-frontend 2>/dev/null || echo "No existing game-frontend process found"
+          
+          # 새로운 프로세스 시작
+          pm2 start serve --name "game-frontend" -- -s dist -l 5173
+          
+          # pm2 설정 저장 (재부팅 시 자동 시작을 위해)
+          pm2 save
+          
           echo "Deployment completed at $(date)" >> /home/frontend/over101/game_frontend/deployment.log
 
-    - name: Notify deployment status (optional)
+    - name: Notify deployment status
       if: always()
       run: |
         echo "Deployment finished with status: ${{ job.status }}"
